--- a/package.json
+++ b/package.json
@@ -33,5 +33,11 @@
     "style-loader": "^0.17.0",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
+  },
+  "dependencies": {
+    "axios": "^0.16.1",
+    "d3-dsv": "^1.0.5",
+    "d3-time-format": "^2.0.5",
+    "react-stockcharts": "^0.6.1"
   }
 }
