--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^0.28.1",
     "electron": "^1.6.7",
     "electron-packager": "^8.7.0",
+    "electron-react-devtools": "^0.4.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
@@ -37,7 +38,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "d3-dsv": "^1.0.5",
-    "d3-time-format": "^2.0.5",
-    "react-stockcharts": "^0.6.1"
+    "plotly.js": "^1.27.1",
+    "react-plotlyjs": "^0.4.1"
   }
 }
