--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "better-react-spinkit": "^2.0.0",
     "d3": "^4.9.1",
     "d3-dsv": "^1.0.5",
     "plotly.js": "^1.27.1",
